--- a/config.yml
+++ b/config.yml
@@ -31,9 +31,9 @@ pipeline:
     dimensions: ["PERSON"]
   - name: EntitySynonymMapper
 policies:
-- name: AugmentedMemoizationPolicy
-- name: TEDPolicy
-  epochs: 40
+#- name: AugmentedMemoizationPolicy
+#- name: TEDPolicy
+#  epochs: 40
 - name: RulePolicy
   core_fallback_threshold: 0.4
   core_fallback_action_name: "action_default_fallback"
