added transfer money skill with switching from pay_cc enabled

--- a/config.yml
+++ b/config.yml
@@ -38,3 +38,4 @@ policies:
   core_fallback_threshold: 0.4
   core_fallback_action_name: "action_default_fallback"
   enable_fallback_prediction: True
+  restrict_rules: false
